<resources>
    <string name="app_name">Assignment</string>
    <string name="Save">Save</string>
    <string name="please_enter_item_name">Please enter item name</string>
    <string name="item_image">item image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="vegetables">vegetables</string>
    <string name="fruits">fruits</string>
    <string name="snacks">snacks</string>
</resources>